# ik-llama-cpp-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
examples/mtp/: Cargo.toml
examples/mtp/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
ik-llama-cpp-2/: Cargo.toml  README.md
ik-llama-cpp-2/src/: context.rs  gguf.rs  grammar.rs  lib.rs  llama_backend.rs  llama_batch.rs  model.rs  mtmd.rs  quantize.rs  sampling.rs  speculative.rs  timing.rs  token.rs
ik-llama-cpp-2/src/context/: embeddings.rs  kv_cache.rs  params.rs  session.rs
ik-llama-cpp-2/src/model/: chat.rs  lora.rs  meta.rs  params.rs
ik-llama-cpp-2/src/token/: data.rs  data_array.rs
ik-llama-cpp-2/tests/: batch_b_smoke.rs  dropin_surface.rs  general_smoke.rs  grammar_smoke.rs  lifecycle.rs  mtp_grammar_bench.rs  mtp_grammar_smoke.rs  negative.rs  safety_smoke.rs  tokenizer.rs
ik-llama-cpp-sys/: Cargo.toml  README.md  build.rs  wrapper.h  wrapper_common.cpp  wrapper_common.h  wrapper_grammar.cpp  wrapper_grammar.h  wrapper_mtmd.h
ik-llama-cpp-sys/src/: lib.rs
scripts/: assemble_mtp_model.py  prepare_models.sh
