[workspace]
resolver = "2"
members = [
  "ik-llama-cpp-sys",
  "ik-llama-cpp-2",
  "examples/simple",
  "examples/mtp",
]

[workspace.dependencies]
# core library deps
thiserror = "2"
tracing = "0.1"
tracing-core = "0.1"
enumflags2 = "0.7.12"
encoding_rs = "0.8.35"

# build deps (sys crate)
bindgen = "0.72.1"
cc = "1.2.61"
cmake = "0.1"
find_cuda_helper = "0.2.0"
glob = "0.3.3"
walkdir = "2"

# examples
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn" }
